--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<title>Ollie Bike Sharing</title>
-	<link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<body>
-	<h1>You're Building a New Website!</h1>
-</body>
+<header>
+    
+    </header>
 </html>
